Fix preview feature/throws keyword